# heshab

./: .env  Cargo.toml  Dockerfile  README.md  build.sh  deploy.sh  login.sh  seed.sql
migrations/: 1_schema.down.sql  1_schema.up.sql
src/: authenticate.rs  customer.rs  data.rs  logo.rs  main.rs  models.rs
ui/: index.html  package-lock.json  package.json  vite.config.js
ui/src/: fonts.css  main.js
ui/src/components/: nav.vue
ui/src/lib/: api.js  cookies.js  utils.js
ui/src/router/: index.js
ui/src/views/: customer.vue  forgotpassword.vue  login.vue  newpassword.vue  search.vue  transactions.vue
