[package]
name = "heshab"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
warp = "0.3.5"
uuid = { version = "1.3.2", features =["v4"] }
serde = { version = "1.0.162", features = ["derive"] }
serde_json = "1.0.96"
tokio = { version = "1", features = ["full"] }
validator = { version = "0.16", features = ["derive"] }
sqlx = { version = "0.7", features = [ "postgres", "runtime-tokio", "tls-rustls", "migrate", "chrono" ] }
jsonwebtoken = "8.3.0"
pbkdf2 = { version = "0.12", features = ["simple"] }
rand_core = { version = "0.6", features = ["std"] }
chrono = { version = "0.4.26", features = ["serde"] }
